guestbook/Service02.yml
apiVersion: v1
kind: Service
metadata:
  name: service-exporter
  labels:
    name: test-exporter
spec:
  selector:
    app: test-exporter
  ports:
    - protocol: TCP
      port: 12345
      targetPort: 9527
